--- a/dot.monacoin/monacoin.conf
+++ b/dot.monacoin/monacoin.conf
@@ -3,6 +3,7 @@ rpcpassword=p
 #daemon=1
 maxconnections=24
 server=1
+# see https://lapool.me/seed/
 addnode=106.172.156.135
 addnode=153.120.39.89
 addnode=160.16.64.177
